<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#42C2FB"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/kode_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/etKodeBarang"
        android:inputType="text"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/jumlah_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="16dp"/>
    <EditText
        android:id="@+id/etJumlahBarang"
        android:inputType="number"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnhitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFC107"
        android:text="@string/hitung"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNamaBarang"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/nama_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvHargaBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/harga_barang"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvTotalHarga"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/total_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/tvDiskon"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/diskon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/tvJumlahBayar"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/jumlah_bayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btnreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset"
        android:textColor="#000000"
        android:textStyle="bold"
        android:backgroundTint="#FFC107"/>

    <Button
        android:id="@+id/btnclose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textStyle="bold"
        android:textColor="#000000"
        android:backgroundTint="#FFC107"/>

    <TextView
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="40dp"/>


</LinearLayout>