<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#42C2FB"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="179dp"
        android:src="@drawable/lamp_light_bulb_icon_vector_20716081_e1562701213740" />

    <EditText
        android:layout_marginTop="20dp"
        android:onClick="clickUsername"
        android:hint="@string/username"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_username"/>

    <EditText
        android:drawableRight="@drawable/ic_show"
        android:drawableLeft="@drawable/ic_password"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:textSize="20dp"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:hint="@string/login"
        android:id="@+id/btnLogin"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/create_a_new_account"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>